mandatory field bug on IE and edge, (missing fields)
search input - layout

--- a/pages/mandatory/mandatory.css
+++ b/pages/mandatory/mandatory.css
@@ -3,7 +3,7 @@
 */
 
 #mandatorylisthost.fragmenthost {
-    height: 124px;
+    height: 186px;
 }
 
 .view-size-bigger #mandatorylisthost.fragmenthost {
